force-app/src/objects/PagesApi__Page_Element__c.object
<CustomObject>
    <description>Page Elements define the content for pages in Fonteva Communities.</description>
    <fields>
        <fullName>OrderApi__Campaign_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Campaign Page.</description>
        <inlineHelpText>Link to related Campaign Page.</inlineHelpText>
        <label>Campaign Page</label>
        <referenceTo>OrderApi__Campaign_Page__c</referenceTo>
        <relationshipLabel>Page Elements</relationshipLabel>
        <relationshipName>Page_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Component__c</fullName>
        <description>The name of the PagesApi component.</description>
        <inlineHelpText>The name of the PagesApi component.</inlineHelpText>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__HTML__c</fullName>
        <description>HTML content for the page element.</description>
        <inlineHelpText>HTML content for the page element.</inlineHelpText>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** Required ** The order in which the element renders inside of a given page section.</description>
        <inlineHelpText>** Required ** The order in which the element renders inside of a given page section.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the page that renders the page element.</description>
        <inlineHelpText>** Required ** Link to the page that renders the page element.</inlineHelpText>
        <label>Page</label>
        <referenceTo>PagesApi__Page__c</referenceTo>
        <relationshipLabel>Page Elements</relationshipLabel>
        <relationshipName>Page_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Page Element</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Element ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>